tests/unchecked_node_module_vs_lib/unchecked_node_module_vs_lib.exp
Error: test.js:12
 12: var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
                      ^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 12: var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
            ^^^^^^^ boolean

Error: test.js:22
 22: var buffer2 = require("./buffer");
                           ^^^^^^^^^^ ./buffer. Required module not found

Error: test.js:25
 25: var buffer3 = require("./buffer.js");
                           ^^^^^^^^^^^^^ ./buffer.js. Required module not found


Found 3 errors
